# pyo3-demo

./: LICENSE  README.md
.cargo/: config.toml
pyo3_demo/: pyo3_demo.py
pyo3_demo/tests/: test_rust_lib_example.py
pyo3_start/: Cargo.toml
pyo3_start/src/: lib.rs
rust_lib/: Cargo.toml  pyproject.toml  rust_lib_example.pyi
rust_lib/src/: lib.rs
